# blueprint-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  _local.http  build.rs  config.yaml
.cargo/: audit.toml
.github/workflows/: main-branch-check.yml  rust.yml  security-audit.yml
proto/: blueprint.proto
src/: lib.rs  main.rs  settings.rs  toolbox.rs  values.rs
src/datastore/: inmem.rs  mod.rs  sql.rs
src/http_server/: mod.rs  routes.rs
src/logic/: domain.rs  dto.rs  error.rs  mod.rs  validation.rs
src/proto/: blueprint.rs  mod.rs
src/server/: http_routes.rs  mod.rs
src/server/grpc/: handler.rs  mod.rs
src/server/http/: mod.rs  routes.rs
src/service/: domain.rs  endpoints.rs  error.rs  mod.rs
tests/: health_check.rs  helpers.rs  subscribe.rs  users.rs
