[package]
name = "blueprint"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"
name = "blueprint"

[[bin]]
path = "src/main.rs"
name = "blueprint"

[dependencies]
actix-service = "2.0.2"
actix-web = "4"
actix-web-lab = "0.20.1"
bytes = "1.4.0"
config = "0.14.0"
email_address = "0.2.4"
futures = "0.3.28"
paste = "1.0.12"
prost = "0.12.3"
prost-types = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "~0.8.3", features = ["runtime-tokio", "mysql"] }
time = "0.3.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
uuid = { version = "1.2.1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.11.12", features = ["json"] }

[build-dependencies]
tonic-build = "0.11.0"
